--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>titulo</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header></header>
-  <main>
-    <h1>
-      Eleve seu negócio digital a outro nível
-      <strong>com um Frot-end de qualidade!
-      </strong></h1>
-      <p>Olá! Sou matheus de gois, desenvolvidor Front-end com especialidade em <strong>React, HTML e CSS</strong>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-      <a href="https://instragram.com/................">Instragram</a>
-      <a href="https://github.com/.....................">GitHub</a>
-      <img src="3.jpeg" alt="foto do matheus de gois programando">
-  </main>
-  <footer></footer>
-</body>
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=decive-width, initial-scale=1.0"/>
+        <link rel="stylesheet"href="style.css"/>
+        <title>Todo List</title>
+    </head>
+    <body>
+        <h1>todos</h1>
+        <form id="form">
+         <input type="text" class="input" id="input" placeholder="Entre com seus afazeres" autocomplete="off">
+         
+         <ul class="todos" id="todos"></ul>
+         </form>
+         <small>Left click to toggle completed.<br> Right click to delete todo</small>
+
+    <script src="script.js"></script>
+ </body>
 </html>
