--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=decive-width, initial-scale=1.0"/>
-        <link rel="stylesheet"href="style.css"/>
-        <title>Todo List</title>
-    </head>
-    <body>
-        <h1>todos</h1>
-        <form id="form">
-         <input type="text" class="input" id="input" placeholder="Entre com seus afazeres" autocomplete="off">
-         
-         <ul class="todos" id="todos"></ul>
-         </form>
-         <small>Left click to toggle completed.<br> Right click to delete todo</small>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Minha lista </title>
+  </head>
+  <body>
+    <h1>Afazeres</h1>
+    <form id="form">
+      <input type="text" class="input" id="input" placeholder="Seus afazeres" autocomplete="off">
+
+      <ul class="todos" id="todos"></ul>
+    </form>
+    <small>clicar para concluir afazer. <br> botaõ direto para apagar.</small>
 
     <script src="script.js"></script>
- </body>
+  </body>
 </html>
